changed button text

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <main>
     <section>
       <div>
-        <button>Click me</button>
+        <button>Click here</button>
       </div>
     </section>
   </main>
